<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">assignment2</string>
    <string name="menu_groups">Groups</string>
    <string name="menu_create_group">Create group</string>
    <string name="menu_invitations">Invitations</string>
    <string name="action_settings">Settings</string>
    <string name="create_group">Create Group</string>
    <string name="groups_title">Groups</string>
    <string name="group_detail_title">Group Detail</string>
    <string name="create_group_title">Create Group</string>
    <string name="member_detail_title">Member detail</string> 
    <string name="expense_detail_title">Expense detail</string>
    <string name="add_expense_title">Add Expense</string>
    <string name="settings_title">Settings</string>
    <string name="create_member_title">Create member</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="create">Create</string>
	<string name="create_member">Create member</string>
	<string name="invite_member">Invite</string>
	<string name="placeholder_firstname">Enter your first name</string>
	<string name="placeholder_lastname">Enter your last name</string>
	<string name="placeholder_youremail">Enter your email address</string>
	<string name="placeholder_groupname">Enter a group name</string>
	<string name="placeholder_email">Enter an email address</string>
	<string name="placeholder_amount">Enter an amount</string>
	<string name="placeholder_type_expense">Enter a type of expense</string>
	<string name="placeholder_description">Enter a description (optional)</string>
	<string name="error_email">Email address is not valid!</string>
	<string name="error_alpha">Only alphabetical characters are allowed!</string>
	<string name="error_amount">Amount is not valid!</string>
	<string name="admin">Admin: </string>
	<string name="total_balance">Total Balance: </string>
	<string name="add_recipient">Add recipient</string>
	<string name="select_currency">Select currency</string>
	<string name="member">Member: </string>
	<string name="members">Members: </string>
	<string name="joined_on">Joined on: </string>
	<string name="description">Description: </string>
	<string name="amount">Amount: </string>
	<string name="date">Date: </string>
	<string name="settle_payments">Settle Payments</string>
	<string name="manage_group">Manage Group</string>
	<string name="add">Add</string>
	<string name="recipients">Recipients: </string>
	<string name="no_members">No members yet</string>
	<string name="take_photo">Add a photo</string>
</resources>
