<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="org.khl.assignment2.MainActivity" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_groups"
        android:orderInCategory="100"
        android:title="@string/menu_groups"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_create_group"
        android:orderInCategory="100"
        android:title="@string/menu_create_group"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_invitations"
        android:orderInCategory="100"
        android:title="@string/menu_invitations"
        app:showAsAction="never"/>

</menu>
