<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.khl.assignment2.MainActivity" >

    <LinearLayout
        android:id="@+id/groupsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
    </LinearLayout>

    <Button
        android:id="@+id/addExpenseBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/linearLayout2"
        android:layout_marginBottom="36dp"
        android:background="@drawable/addbtn_selector"
        android:onClick="addExpense" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/addExpenseBtn"
        android:orientation="vertical" >

        <ListView
            android:id="@android:id/list"
            android:layout_width="fill_parent"
            android:layout_height="310dp"
            android:divider="#b5b5b5"
            android:dividerHeight="1dp"
            android:listSelector="@drawable/list_selector" >
        </ListView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/addExpenseBtn"
        android:layout_alignTop="@+id/addExpenseBtn"
        android:orientation="vertical" >

        <Button
            android:id="@+id/settleBtn"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginBottom="10dp"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:background="@drawable/button_selector"
            android:onClick="settlePayments"
            android:text="@string/settle_payments"
            android:textColor="#FFFF" />

        <Button
            android:id="@+id/manageGroupBtn"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:background="@drawable/button_selector"
            android:onClick="manageGroup"
            android:text="@string/manage_group"
            android:textColor="#FFFF" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/groupsLayout"
        android:layout_below="@+id/groupsLayout"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/admin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/admin"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/totalBalance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_balance"
            android:textAppearance="?android:attr/textAppearanceSmall" />
       
    </LinearLayout>

</RelativeLayout>